# new_passion_fruit

./: .env  ENV_EXAMPLE.txt  pyproject.toml
app/: main.py
app/api/routes/: auth.py  diary.py  question.py  quote.py
app/core/: config.py  security.py
app/db/: database.py
app/db/models/: diary.py  question.py  quotes.py  user.py
app/schemas/: diary.py  question.py  quotes.py  user.py
app/webscraping/: question_scr.py  quote_scr.py
frontend/: auth.html  diary.html  index.html  question.html  quote.html
frontend/css/: style.css
frontend/js/: api.js
로그인로직전체/: db_session.py  main.py  models.py  security.py
로그인로직전체/: crud.py  index.html  schemas.py  test_db.py
