[tool.poetry]
name = "new-passion-fruit"
version = "0.1.0"
description = ""
authors = ["ducknam3650 <ducknam3650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.0"
uvicorn = "^0.38.0"
ruff = "^0.14.2"
tortoise-orm = "^0.25.1"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
